force-app/main/default/objects/Forecast_Snapshot__c/Forecast_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Forecast Snapshot</label>
    <nameField>
        <label>Forecast Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>