force-app/main/default/objects/Forecast_Snapshot__c/fields/Deal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner__c</fullName>
    <label>Deal Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>