force-app/main/default/objects/Forecast_Snapshot__c/fields/Equipment_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Sales_Amount__c</fullName>
    <label>Equipment Sales Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>