force-app/main/default/objects/Forecast_Snapshot__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>