force-app/main/default/objects/Forecast_Snapshot__c/fields/Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage__c</fullName>
    <label>Sales Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>